k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: taskmanager
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "3001"
    spec:
      enableServiceLinks: false
      imagePullSecrets:
        - name: ycr-pull-secret
      containers:
        - name: server
          image: cr.yandex/crp601ul54omhpos8c8d/taskmanager-server:sha-2546c202ac065ea0a65bddbc13fb9a44fbea9788
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 3001
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 3001
            initialDelaySeconds: 120
            periodSeconds: 20
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 3001
            periodSeconds: 5
            failureThreshold: 30
