k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: taskmanager
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
