k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: taskmanager
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - name: http
      port: 3001
      targetPort: 3001
